@@ -6,12 +6,12 @@ LFLAGSLOCAL = -L../lib -lsoap -lexm -lgridg -lpthread -lm
 ####### Files
 
 HEADERS =       share.h
-SOURCES =	share.c bdrylayer.c normalshock.c shearlayer.c obliqueshock.c inlet.c inletgeom.c injector.c compressionfan.c cathode.c ringleb.c tauvt.c calc.c tecgrid2D.c tecgrid3D.c mpitest.c average.c equilairplasma.c soap.c thermionic.c chemkin2cfdwarp.c atten.c
-OBJECTS =	share.o bdrylayer.o normalshock.o shearlayer.o obliqueshock.o inlet.o inletgeom.o injector.o compressionfan.o cathode.o ringleb.o tauvt.o calc.o tecgrid2D.o tecgrid3D.o mpitest.o average.o equilairplasma.o soap.o thermionic.o chemkin2cfdwarp.o atten.o
-TARGETS  =	bdrylayer normalshock shearlayer obliqueshock inlet inletgeom injector compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp atten
+SOURCES =	share.c bdrylayer.c normalshock.c shearlayer.c obliqueshock.c inlet.c injector.c compressionfan.c cathode.c ringleb.c tauvt.c calc.c tecgrid2D.c tecgrid3D.c mpitest.c average.c equilairplasma.c soap.c thermionic.c chemkin2cfdwarp.c atten.c
+OBJECTS =	share.o bdrylayer.o normalshock.o shearlayer.o obliqueshock.o inlet.o injector.o compressionfan.o cathode.o ringleb.o tauvt.o calc.o tecgrid2D.o tecgrid3D.o mpitest.o average.o equilairplasma.o soap.o thermionic.o chemkin2cfdwarp.o atten.o
+TARGETS  =	bdrylayer normalshock shearlayer obliqueshock inlet injector compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp atten
 ####### Build rules
 
-all: bdrylayer normalshock shearlayer obliqueshock inlet injector inletgeom compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp atten
+all: bdrylayer normalshock shearlayer obliqueshock inlet injector compressionfan cathode ringleb tauvt openmptest calc tecgrid2D tecgrid3D mpitest average equilairplasma soap thermionic chemkin2cfdwarp atten
 
 tecgrid2D: tecgrid2D.o 
 	$(L) tecgrid2D.o -o tecgrid2D $(LFLAGS) $(LFLAGSLOCAL)
@@ -36,9 +36,6 @@ obliqueshock: share.o obliqueshock.o
 
 inlet: share.o inlet.o
 	$(L) share.o inlet.o -o inlet $(LFLAGS) $(LFLAGSLOCAL)
-
-inletgeom: share.o inletgeom.o
-	$(L) share.o inletgeom.o -o inletgeom $(LFLAGS) $(LFLAGSLOCAL)
 
 injector: share.o injector.o
 	$(L) share.o injector.o -o injector $(LFLAGS) $(LFLAGSLOCAL)
